--- a/TPNote_Groupe14/pom.xml
+++ b/TPNote_Groupe14/pom.xml
@@ -10,5 +10,7 @@
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>org.centrale.medev.tpnote_groupe14.TPNote_Groupe14</exec.mainClass>
+        <sonar.organization>medev-tpnote-groupe14</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 </project>
