--- a/TPNote_Groupe14/pom.xml
+++ b/TPNote_Groupe14/pom.xml
@@ -6,28 +6,66 @@
     <version>1.0</version>
     <packaging>jar</packaging>
     <build> 
-        <plugins> 
-            <plugin> 
-                <groupId>org.jacoco</groupId> 
-                <artifactId>jacoco-maven-plugin</artifactId> 
-                <version >0.8.10</version> 
-                <executions> 
-                    <execution> 
-                        <goals> 
-                            <goal>prepare-agent</goal> 
-                        </goals> 
-                    </execution> 
-                    <execution> 
-                        <id>report</id> 
-                        <phase>verify</phase> 
-                        <goals> 
-                            <goal>report</goal> 
-                        </goals> 
-                    </execution> 
-                </executions> 
-            </plugin> 
-        </plugins> 
+        <pluginManagement>
+            <plugins>
+                <plugin> 
+                    <groupId>org.jacoco</groupId> 
+                    <artifactId>jacoco-maven-plugin</artifactId> 
+                    <version >0.8.12</version> 
+                    <executions> 
+                        <execution> 
+                            <goals> 
+                                <goal>prepare-agent</goal> 
+                            </goals> 
+                        </execution> 
+                        <execution> 
+                            <id>report</id> 
+                            <phase>verify</phase> 
+                            <goals> 
+                                <goal>report</goal> 
+                            </goals> 
+                        </execution> 
+                    </executions> 
+
+
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.3.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.13.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.4.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>3.1.3</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.1.3</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.21.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                    <version>3.8.0</version>
+                </plugin>
+                
+            </plugins> 
+        </pluginManagement> 
     </build>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
@@ -36,4 +74,29 @@
         <sonar.organization>medev-tpnote-groupe14</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.11.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
+    <dependencies>
+        <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
