--- a/TPNote_Groupe14/pom.xml
+++ b/TPNote_Groupe14/pom.xml
@@ -9,6 +9,19 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>org.centrale.medev.tpnote_groupe14.TPNote_Groupe14</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.6.0</version>
                 <executions>
@@ -59,10 +72,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.5.2</version>
                 </plugin>
-                <plugin>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.4.2</version>
-                </plugin>
+                
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
                     <version>3.1.3</version>
@@ -93,8 +103,8 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>org.centrale.medev.tpnote_groupe14.TPNote_Groupe14</exec.mainClass>
         <sonar.organization>medev-tpnote-groupe14</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
